--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zxing/ngx-scanner",
-  "version": "1.0.0",
+  "name": "@ivanmonteiro/ngx-scanner",
+  "version": "v3.5.1",
   "homepage": "https://github.com/zxing-js/ngx-scanner#readme",
   "repository": {
     "type": "git",
@@ -56,7 +56,7 @@
     "@angular/platform-browser-dynamic": "^13.2.1",
     "@angular/router": "^13.2.1",
     "@angular/service-worker": "^13.2.1",
-    "@zxing/browser": "^0.1.3",
+    "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.0",
     "rxjs": "^7.5.2",
     "tslib": "^2.3.1"
