--- a/projects/zxing-scanner/package.json
+++ b/projects/zxing-scanner/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zxing/ngx-scanner",
-  "version": "3.5.0",
+  "name": "@ivanmonteiro/ngx-scanner",
+  "version": "3.5.1",
   "description": "High-performance Angular 8 barcode scanner component based on ZXing.",
   "homepage": "https://github.com/zxing-js/ngx-scanner#readme",
   "private": false,
@@ -9,8 +9,8 @@
     "@angular/common": "^11.2.11 || ^12.0.4 || ^13.0.0",
     "@angular/core": "^11.2.11 || ^12.0.4 || ^13.0.0",
     "@angular/forms": "^11.2.11 || ^12.0.4 || ^13.0.0",
-    "@zxing/browser": "^0.1.1",
-    "@zxing/library": "^0.19.1",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.0",
     "rxjs": "^6.6.3 || ^7.0.0"
   }
 }
